# cross-cause-cost-effectiveness-model-public

./: .editorconfig  .gitattributes  .gitignore  Procfile  README.md  package-lock.json  package.json  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  mirror_main.yml
accessory_models/: shrimp.py
ccm/: README.md  base_parameters.py  config.py  contexts.py  interfaces.py  parameters.py
ccm/data/: xrisks_df_access.py
ccm/interventions/: intervention.py  interventions_readme.md
ccm/interventions/animal/: animal_intervention_params.py  animal_interventions.py
ccm/interventions/ghd/: ghd_intervention_params.py  ghd_interventions.py
ccm/interventions/intervention_definitions/: all_interventions.py  animal_welfare_interventions.py  default_interventions.py  hardcoded_interventions.py  scaled_interventions.py  shrimp_interventions.py  xrisk_interventions.py
ccm/interventions/xrisk/: xrisk_interventions.py
ccm/research_projects/: rp_readme.md
ccm/research_projects/funding_pools/: cause_benchmark_fp.py  funding_pool.py  specified_intervention_fp.py
ccm/research_projects/projects/: bottom_line.py  (+4 more)
ccm/utility/: models.py  moral_weight_adapter.py  risk_calculator.py  risk_weighter.py  squigglepy_wrapper.py  utils.py
ccm/world/: animals.py  eras.py  longterm_params.py  moral_weight_params.py  population.py  risk_types.py  space.py  world_readme.md
ccm_api/: main.py  models.py
ccm_react/: .eslintrc.cjs  .prettierignore  index.html  jest.config.ts  package-lock.json  package.json  tsconfig.node.json  uno.config.ts  vite.config.ts
ccm_react/public/: _headers  robots.txt
ccm_react/scripts/: test_cypress.sh
ccm_react/src/: main.css  main.tsx
data/projects/: Unclean WVI Projects.csv  WVI Projects.csv  cumulative_x_risks.csv  projects.csv  xrisk_df.csv
output/plots/: .gitignore
tests/: conftest.py  test_animal_intervention_params.py  test_animal_interventions.py  test_api_models.py  test_distribution_specs.py  test_eras.py  test_funding_pools.py  test_ghd_interventions.py  test_impact_method.py  test_impact_method_thousand_years.py  test_impact_method_time_of_perils.py  test_impact_method_years_saved.py  test_longterm_params.py  test_moral_weight_adapter.py  test_parameters.py  test_population.py  test_research_projects.py  test_risk_calculator.py  test_risk_types.py  test_space.py  test_utils.py  test_xrisk_interventions.py  test_years_credit.py  testing_utils.py  xrisk_test.csv
(+190 files in other folders)
